Align fix

--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -64,6 +64,6 @@ div.perso > h1 {
 }
 
 .site-nav {
-  margin-top: 24px!important;
+  margin-top: 20px!important;
   line-height: inherit!important;
 }
